jquery file offline

--- a/index.html
+++ b/index.html
@@ -1,13 +1,9 @@
 <html>
 
 <head>
-    <!-- Font Awesome -->
     <link rel="stylesheet" href="bootstrap.min.css">
-    <!-- Bootstrap core CSS -->
     <link href="mdb.min.css" rel="stylesheet">
-    <!-- JQuery -->
-    <script type="text/javascript" src="jquery-3.3.1.min"></script>
-    <!-- Bootstrap tooltips -->
+    <script src="jquery.min.js"></script>
     <meta charset="ISO-8859-1">
     <script>
         $(document).ready(function () {
