--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
     <h2>
         <div id="wrapper" class="card col-8 offset-2  bg-danger">
             <div class="card-header bg-white justify-content-around row align-items-center ">
-                <img class="" src="FIRSTLego_IconVert_RGB.png" style="height: 10%;">
+                <img class="" src="FIRSTLego_IconVert_RGB.PNG" style="height: 10%;">
                 <h1><label class="">Jugding Timer</label></h1>
                 <img class="" src="INTO-ORBIT-Logo_full-color.png" style="height: 10%;">
             </div>
