changed back to jquery

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <link rel="stylesheet" href="bootstrap.min.css">
     <link href="mdb.min.css" rel="stylesheet">
-    <script src="jquery.mobile.min.js"></script>
+    <script src="jquery.min.js"></script>
     <meta charset="ISO-8859-1">
     <script>
         $('#pause').attr("disabled", "disabled");
